# windows-app-rs

./: Cargo.toml
.github/: readme.md
.github/workflows/: build.yml
bindings/: cargo.toml
crates/targets/aarch64_msvc/: Cargo.toml
crates/targets/i686_msvc/: Cargo.toml
crates/targets/x86_64_msvc/: Cargo.toml
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
samples/bootstrap/: Cargo.toml  build.rs
samples/bootstrap/src/: main.rs
src/: bootstrap.rs
src/Microsoft/Foundation/: mod.rs
src/Microsoft/Graphics/DirectX/: mod.rs
src/Microsoft/UI/: mod.rs
src/Microsoft/UI/Composition/: mod.rs
src/Microsoft/UI/Composition/Core/: mod.rs
src/Microsoft/UI/Composition/Diagnostics/: mod.rs
src/Microsoft/UI/Composition/Effects/: mod.rs
src/Microsoft/UI/Composition/Interactions/: mod.rs
src/Microsoft/UI/Composition/Scenes/: mod.rs
src/Microsoft/UI/Composition/SystemBackdrops/: mod.rs
src/Microsoft/UI/Dispatching/: mod.rs
src/Microsoft/UI/Input/: mod.rs
src/Microsoft/UI/Input/Interop/: mod.rs
src/Microsoft/UI/Text/: mod.rs
src/Microsoft/UI/Windowing/: mod.rs
src/Microsoft/UI/Xaml/: mod.rs
src/Microsoft/UI/Xaml/Automation/: mod.rs
src/Microsoft/UI/Xaml/Data/: mod.rs
src/Microsoft/UI/Xaml/Documents/: mod.rs
src/Microsoft/UI/Xaml/Hosting/: mod.rs
src/Microsoft/UI/Xaml/Input/: mod.rs
src/Microsoft/UI/Xaml/Interop/: mod.rs
src/Microsoft/Windows/AppLifecycle/: mod.rs
src/Microsoft/Windows/PushNotifications/: mod.rs
src/Microsoft/Windows/System/: mod.rs
src/Microsoft/WindowsAppSdk/Foundation/: mod.rs
(+19 files in other folders)
