[package]
name = "app"
version = "0.0.0"
edition = "2018"
authors = []
license = ""
description = ""
repository = ""
documentation = ""
readme = ""
exclude = []
publish = false

[build-dependencies]
"windows" = { git = "https://github.com/microsoft/windows-rs", features = ["build"] }

[dependencies.windows-app]
path = "../../"
features = [
    "WindowsAppSdk_Foundation"
]
