[package]
name = "app"
version = "0.0.0"
edition = "2018"
authors = []
license = ""
description = ""
repository = ""
documentation = ""
readme = ""
exclude = []
publish = false

[build-dependencies]
"windows" = { version = "0.26", features = ["build"] }

[dependencies]
"windows" = { version = "0.26" }

[dependencies.windows-app]
path = "../../"
features = [
    "Foundation",
    "WindowsAppSdk_Foundation",
    "Windows_System_Power"
]
